fixed spacing of button and table on farmer edit inventory page

--- a/src/App.css
+++ b/src/App.css
@@ -232,8 +232,9 @@
 
 .inventory-container {
     max-width: 515px;
-    height: 80vh;
-    margin: 0 auto;
+	margin: 0 auto;
+	margin-top: 150px;
+	margin-bottom: 150px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -330,7 +331,6 @@ input[type=number]::-webkit-outer-spin-button {
 
 .table-contents {
     width: 100%;
-    margin-bottom: 64px;
 	background: #FFFFFF;
 }
 
@@ -350,12 +350,27 @@ input[type=number]::-webkit-outer-spin-button {
 	margin-right: 8px;
 }
 
+.save-changes-button {
+	height: 66px;
+	width: 515px;
+	margin-top: 64px;
+	background: #3d6600;
+	border: none;
+	border-radius: 5px;
+	font-family: 'Roboto', sans-serif;
+	font-size: 20px;
+	color: #FFFFFF;
+	cursor: pointer;
+	outline: none;
+}
+
 /********************************* SHOPPER HOMEPAGE **************************************************/
 
 .shopper-homepage-container {
 	max-width: 515px;
-	height: 80vh;
 	margin: 0 auto;
+	margin-top: 150px;
+	margin-bottom: 150px;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -423,8 +438,9 @@ input[type=number]::-webkit-outer-spin-button {
 
 .shopper-view-inventory-container {
 	max-width: 515px;
-	height: 80vh;
 	margin: 0 auto;
+	margin-top: 16px;
+	margin-bottom: 150px;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
